alignment issue resolved

--- a/app/styles/components/_content-display-count.scss
+++ b/app/styles/components/_content-display-count.scss
@@ -26,7 +26,7 @@
   -webkit-flex: 1 1 auto;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
-  margin: 10px;
+  margin: 10px 10px 5px;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -62,7 +62,13 @@
   }
 
   .lesson {
-    margin-bottom: 20px;
+    min-height: 24px;
+    text-align: center;
+    vertical-align: middle;
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
 
     i {
       background: url("images/lesson-icon.svg");
